--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,7 +1,7 @@
 appname = push-data
 httpport = 8080
 runmode = dev
-autorender = false
+autorender = true
 copyrequestbody = true
 EnableDocs = true
 sqlconn = 
